bower setup and cleanup

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Doughnut Chart</title>
-        <script src="assets/raphael.js"></script>
+        <script src="vendor/raphael.js"></script>
         <meta name="viewport" content="initial-scale = 1, user-scalable = no">
         <link rel="stylesheet" href="assets/styles.css">
     </head>
@@ -26,7 +26,11 @@
 
         </section>
         
-        <script src="assets/app.js"></script>
+        <script src="../dist/app.js"></script>
+        <script>
+            app.chart.profile.init('profile_bar');
+            app.chart.pie.init('pie_chart');
+        </script>
 
     </body>
 </html>
