file/folder structure

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
     <head>
-        <title>Doughnut Chart</title>
-        <script src="vendor/raphael.js"></script>
+        <title>Chartphael demo - alpha</title>
+        <script src="../raphael/raphael-min.js"></script>
         <meta name="viewport" content="initial-scale = 1, user-scalable = no">
         <link rel="stylesheet" href="assets/styles.css">
     </head>
@@ -26,7 +26,7 @@
 
         </section>
         
-        <script src="../dist/app.js"></script>
+        <script src="../dist/chartphael.js"></script>
         <script>
             app.chart.profile.init('profile_bar');
             app.chart.pie.init('pie_chart');
