--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Chartphael demo - alpha</title>
-        <script src="../raphael/raphael-min.js"></script>
+        <script src="../../raphael/raphael-min.js"></script>
         <meta name="viewport" content="initial-scale = 1, user-scalable = no">
         <link rel="stylesheet" href="assets/styles.css">
     </head>
