gitignore and bower json update

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Chartphael demo - alpha</title>
-        <script src="../../raphael/raphael-min.js"></script>
+        <script src="raphael/raphael-min.js"></script>
         <meta name="viewport" content="initial-scale = 1, user-scalable = no">
         <link rel="stylesheet" href="assets/styles.css">
     </head>
@@ -11,7 +11,7 @@
         <section id="sidebar">
             <figure>
                 <img src="assets/profile.png" alt="profile" />
-                <div id="profile_bar" data-value="50"></div>        
+                <div id="profile_bar" data-value="30"></div>        
             </figure>
         </section>
 
