--- a/demo/index.html
+++ b/demo/index.html
@@ -59,23 +59,40 @@
             };
 
             var bmfChartJSON = {
+                "infoAxis": [
+                    { 
+                        "coord": { "y": 1300 },
+                        "color": "#515d34"
+                    },
+                    { 
+                        "coord": { "y": 1000 },
+                        "color": "#bfce3b"
+                    }
+                ],
                 "items": [
-                    { "x": 0, "y": 0 },
-                    { "x": 4, "y": 50 },
-                    { "x": 6, "y": 65 },
-                    { "x": 8, "y": 80 },
-                    { "x": 10, "y": 95 },
-                    { "x": 13, "y": 95 },
-                    { "x": 18, "y": 110 },
-                    { "x": 20, "y": 85 },
-                    { "x": 24, "y": 95 }
+                    { "y": 1700 },
+                    { "y": 1800 },
+                    { "y": 1200 },
+                    { "y": 1600 },
+                    { "y": 1300 },
+                    { "y": 1300 },
+                    { "y": 1600 },
+                    { "y": 1600 }
                 ]
             };
 
             var lineChartJSON = {
-                "axis": {
-                    "x": [0,2,4,6,8,10,12,14,16,18,20,22,24],
-                    "y": [0,25,50,75,100,125,150,175]
+                "grid": {
+                    "x": {
+                        "interval": 2,
+                        "min": 0,
+                        "max": 31
+                    },
+                    "y": {
+                        "interval": 25,
+                        "min": 0,
+                        "max": 175
+                    }
                 },
                 "items": [
                     { "x": 0, "y": 30 },
@@ -84,7 +101,7 @@
                     { "x": 8, "y": 80 },
                     { "x": 10, "y": 95 },
                     { "x": 13, "y": 95 },
-                    { "x": 18, "y": 110 },
+                    { "x": 18, "y": 100 },
                     { "x": 20, "y": 85 },
                     { "x": 22, "y": 75 },
                     { "x": 24, "y": 95 }
@@ -103,7 +120,16 @@
             var bmfChart = new chartphael({
                 id: 'bmf_chart',
                 type: 'bmf',
-                data: bmfChartJSON
+                data: bmfChartJSON,
+                fixedStepY: 150,
+                xAxis: false,
+                directionY: 'right',
+                padding: {
+                    'top': 125,
+                    'right': 100,
+                    'bottom': 100,
+                    'left': 0
+                },
             });
 
             var pieChart = new chartphael({
@@ -112,13 +138,13 @@
                 data: pieChartJSON
             });
 
-            var lineGraph = new chartphael({
+            /*var lineGraph = new chartphael({
                 id: 'line_chart',
                 type: 'line',
                 data: lineChartJSON,
                 dataXMax: 24,
                 dataYMax: 175
-            });
+            });*/
             
         </script>
 
