mbf circle chart

--- a/demo/index.html
+++ b/demo/index.html
@@ -78,7 +78,22 @@
                     { "y": 1300 },
                     { "y": 1600 },
                     { "y": 1600 }
-                ]
+                ],
+                "customCircle": {
+                    "value": 1345,
+                    "statusColor": "#df4c44",
+                    "progress": {
+                        "innerStep": {
+                            "percent": "80"
+                        },
+                        "outerStep": [
+                            { "percent": "20", "color": "yellow" },
+                            { "percent": "20", "color": "red" },
+                            { "percent": "60", "color": "#f3f3f0" }
+                            
+                        ]
+                    }
+                }
             };
 
             var lineChartJSON = {
