--- a/demo/index.html
+++ b/demo/index.html
@@ -50,11 +50,11 @@
             
             var pieChartJSON = {
                 "items": [
-                    { "label": "Europe", "percent": "20", "color": "#717917" },
-                    { "label": "America", "percent": "20", "color": "#a6beaa" },
-                    { "label": "Africa", "percent": "30", "color": "#bf8c53" },
-                    { "label": "Asia", "percent": "10", "color": "#e4c95e" },
-                    { "label": "Australia", "percent": "20", "color": "#f1eb66" },
+                    { "percent": "20", "color": "#717917" },
+                    { "percent": "20", "color": "#a6beaa" },
+                    { "percent": "30", "color": "#bf8c53" },
+                    { "percent": "10", "color": "#e4c95e" },
+                    { "percent": "20", "color": "#f1eb66" },
                 ]
             };
 
@@ -80,17 +80,13 @@
                     { "y": 1600 }
                 ],
                 "customCircle": {
-                    "value": 1345,
                     "statusColor": "#df4c44",
                     "progress": {
-                        "innerStep": {
-                            "percent": "80"
-                        },
+                        "innerStep": 100,
                         "outerStep": [
-                            { "percent": "20", "color": "yellow" },
-                            { "percent": "20", "color": "red" },
-                            { "percent": "60", "color": "#f3f3f0" }
-                            
+                            { "percent": 25, "color": "#e6d62c" },
+                            { "percent": 25, "color": "#df4c44" },
+                            { "percent": 50, "color": "#f3f3f0" }
                         ]
                     }
                 }
