pie chart animations

--- a/demo/index.html
+++ b/demo/index.html
@@ -54,7 +54,7 @@
                     { "percent": "20", "color": "#a6beaa" },
                     { "percent": "30", "color": "#bf8c53" },
                     { "percent": "10", "color": "#e4c95e" },
-                    { "percent": "20", "color": "#f1eb66" },
+                    { "percent": "20", "color": "#f1eb66" }
                 ]
             };
 
