line chart update

--- a/demo/index.html
+++ b/demo/index.html
@@ -97,7 +97,7 @@
                     "x": {
                         "interval": 2,
                         "min": 0,
-                        "max": 31
+                        "max": 26
                     },
                     "y": {
                         "interval": 25,
@@ -114,8 +114,8 @@
                     { "x": 13, "y": 95 },
                     { "x": 18, "y": 100 },
                     { "x": 20, "y": 85 },
-                    { "x": 22, "y": 75 },
-                    { "x": 24, "y": 95 }
+                    { "x": 23, "y": 75 },
+                    { "x": 26, "y": 95 }
                 ]
             };
 
@@ -149,13 +149,11 @@
                 data: pieChartJSON
             });
 
-            /*var lineGraph = new chartphael({
+            var lineGraph = new chartphael({
                 node: document.getElementById('line_chart'),
                 type: 'line',
-                data: lineChartJSON,
-                dataXMax: 24,
-                dataYMax: 175
-            });*/
+                data: lineChartJSON
+            });
             
         </script>
 
