major update and addition of bar chart

--- a/demo/index.html
+++ b/demo/index.html
@@ -167,16 +167,7 @@
             var bmfChart = new chartphael({
                 node: document.getElementById('bmf_chart'),
                 type: 'bmf',
-                data: bmfChartJSON,
-                fixedStepY: 150,
-                xAxis: false,
-                directionY: 'right',
-                padding: {
-                    'top': 125,
-                    'right': 100,
-                    'bottom': 100,
-                    'left': 0
-                }
+                data: bmfChartJSON
             });
 
             var pieChart = new chartphael({
