readme and pie mod

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,7 @@
         <title>Chartphael demo - alpha</title>
         <script src="raphael/raphael-min.js"></script>
         <meta name="viewport" content="initial-scale = 1, user-scalable = no">
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="assets/styles.css">
     </head>
     <body>
@@ -93,8 +94,7 @@
                         "innerStep": 100,
                         "outerStep": [
                             { "percent": 25, "color": "#e6d62c" },
-                            { "percent": 25, "color": "#df4c44" },
-                            { "percent": 50, "color": "#f3f3f0" }
+                            { "percent": 125, "color": "#df4c44" }
                         ]
                     }
                 }
