arc graph data and update mod

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,7 @@
         <section id="sidebar">
             <figure>
                 <img src="assets/profile.png" alt="profile" />
-                <div class="chart_el" id="profile_bar" data-value="30"></div>        
+                <div class="chart_el" id="profile_bar"></div>        
             </figure>
         </section>
 
@@ -161,7 +161,8 @@
 
             var profileArc = new chartphael({
                 node: document.getElementById('profile_bar'),
-                type: 'arc'
+                type: 'arc',
+                data: { value: 45 }
             });
 
             var bmfChart = new chartphael({
