trach method for arc graph

--- a/demo/index.html
+++ b/demo/index.html
@@ -162,6 +162,7 @@
             var profileArc = new chartphael({
                 node: document.getElementById('profile_bar'),
                 type: 'arc',
+                track: true,
                 data: { value: 45 }
             });
 
