responsive option added

--- a/demo/index.html
+++ b/demo/index.html
@@ -28,28 +28,28 @@
             <section>
                 <h2>Pie chart</h2>
                 <div class="chart_wrap">
-                    <div class="chart_el" id="pie_chart"></div>
+                    <div class="chart_el flexi" id="pie_chart"></div>
                 </div>
             </section>
 
             <section>
                 <h2>Doughnut chart</h2>
                 <div class="chart_wrap">
-                    <div class="chart_el" id="doughnut_chart"></div>
+                    <div class="chart_el flexi" id="doughnut_chart"></div>
                 </div>
             </section>
 
             <section>
                 <h2>Line chart</h2>
                 <div class="chart_wrap">
-                    <div class="chart_el" id="line_chart"></div>
+                    <div class="chart_el flexi" id="line_chart"></div>
                 </div>
             </section>
 
             <section>
                 <h2>Bar chart</h2>
                 <div class="chart_wrap">
-                    <div class="chart_el" id="bar_chart"></div>
+                    <div class="chart_el flexi" id="bar_chart"></div>
                 </div>
             </section>
 
