bmf outer status precetage progress

--- a/demo/index.html
+++ b/demo/index.html
@@ -112,7 +112,10 @@
                     { "y": 1600 }
                 ],
                 "tracker": {
-                    "statusColor": "#df4c44",
+                    "status": {
+                        "percent": 100,
+                        "color": "#df4c44"
+                    },
                     "progress": {
                         "innerStep": { "percent": 100, "color": "#8eb727" },
                         "outerStep": [
